@@ -132,3 +132,4 @@ v0.7.6
 * nfqws2: dtls protocol detection
 * nfqws2: autohostlist reset retransmitter to break long wait
 * zapret-auto: stadard_failure_detector reset retransmitter to break long wait
+* nfqws2, init.d, windivert : dht and wg detection changes
